continuiation of tetsy

--- a/tetsy-trie-root/Cargo.toml
+++ b/tetsy-trie-root/Cargo.toml
@@ -16,7 +16,7 @@ hex-literal = "0.2"
 tetsy-keccak-hasher = { path = "../test-support/tetsy-keccak-hasher", version = "0.15.2" }
 tetsy-trie-standardmap = { path = "../test-support/tetsy-trie-standardmap", version = "0.15.2" }
 # DISABLE the following line when publishing until cyclic dependencies are resolved https://github.com/rust-lang/cargo/issues/4242
-# tetsy-reference-trie = { path = "../test-support/tetsy-reference-trie", default-features = false, version = "0.20.0" }
+tetsy-reference-trie = { path = "../test-support/tetsy-reference-trie", default-features = false, version = "0.20.0" }
 
 [features]
 default = ["std"]
