--- a/tetsy-trie-db/Cargo.toml
+++ b/tetsy-trie-db/Cargo.toml
@@ -22,7 +22,7 @@ tetsy-trie-root = { path = "../tetsy-trie-root", version = "0.16.0"}
 tetsy-trie-standardmap = { path = "../test-support/tetsy-trie-standardmap", version = "0.15.2" }
 tetsy-keccak-hasher = { path = "../test-support/tetsy-keccak-hasher", version = "0.15.2" }
 # DISABLE the following line when publishing until cyclic dependencies are resolved https://github.com/rust-lang/cargo/issues/4242
-# tetsy-reference-trie = { path = "../test-support/tetsy-reference-trie", default-features = false, version = "0.20.0" }
+tetsy-reference-trie = { path = "../test-support/tetsy-reference-trie", default-features = false, version = "0.20.0" }
 hex-literal = "0.2"
 criterion = "0.3"
 tetsy-codec = "3.0"
