--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-	"hash-db",
-	"memory-db",
+	"tetsy-hash-db",
+	"tetsy-memory-db",
 	"hash256-std-hasher",
 	"test-support/keccak-hasher",
 	"test-support/reference-trie",
