--- a/test-support/keccak-hasher/Cargo.toml
+++ b/test-support/keccak-hasher/Cargo.toml
@@ -8,11 +8,11 @@ license = "Apache-2.0"
 
 [dependencies]
 tiny-keccak = "1.4.2"
-hash-db = { path = "../../hash-db", default-features = false, version = "0.15.2" }
+tetsy-hash-db = { path = "../../tetsy-hash-db", default-features = false, version = "0.15.2" }
 hash256-std-hasher = { path = "../../hash256-std-hasher", version = "0.15.2" }
 
 [features]
 default = ["std"]
 std = [
-  "hash-db/std",
+  "tetsy-hash-db/std",
 ]
