--- a/test-support/trie-bench/Cargo.toml
+++ b/test-support/trie-bench/Cargo.toml
@@ -10,8 +10,8 @@ edition = "2018"
 [dependencies]
 keccak-hasher = { path = "../keccak-hasher", version = "0.15.2" }
 trie-standardmap = { path = "../trie-standardmap", version = "0.15.2" }
-hash-db = { path = "../../hash-db" , version = "0.15.2"}
-memory-db = { path = "../../memory-db", version = "0.18.0" }
+tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2"}
+tetsy-memory-db = { path = "../../tetsy-memory-db", version = "0.18.0" }
 trie-root = { path = "../../trie-root", version = "0.15.2" }
 trie-db = { path = "../../trie-db", version = "0.19.0" }
 criterion = "0.2.8"
