--- a/trie-db/Cargo.toml
+++ b/trie-db/Cargo.toml
@@ -10,13 +10,13 @@ license = "Apache-2.0"
 log = "0.4"
 rand = { version = "0.6", default-features = false }
 smallvec = "1.0.0"
-hash-db = { path = "../hash-db", default-features = false, version = "0.15.2"}
+tetsy-hash-db = { path = "../tetsy-hash-db", default-features = false, version = "0.15.2"}
 hashbrown = { version = "0.6.3", default-features = false }
 rustc-hex = { version = "2.1.0", default-features = false, optional = true }
 
 [dev-dependencies]
 env_logger = "0.6"
-memory-db = { path = "../memory-db", version = "0.18.0" }
+tetsy-memory-db = { path = "../tetsy-memory-db", version = "0.18.0" }
 trie-root = { path = "../trie-root", version = "0.15.2"}
 trie-standardmap = { path = "../test-support/trie-standardmap", version = "0.15.2" }
 keccak-hasher = { path = "../test-support/keccak-hasher", version = "0.15.2" }
@@ -30,7 +30,7 @@ parity-codec-derive = "3.0"
 [features]
 default = ["std"]
 std = [
-  "hash-db/std",
+  "tetsy-hash-db/std",
   "rand/std",
   "rustc-hex",
 ]
