--- a/trie-db/fuzz/Cargo.toml
+++ b/trie-db/fuzz/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 cargo-fuzz = true
 
 [dependencies]
-memory-db = { path = "../../memory-db", version = "0.18.0" }
+tetsy-memory-db = { path = "../../tetsy-memory-db", version = "0.18.0" }
 reference-trie = { path = "../../test-support/reference-trie", version = "0.18.0" }
 keccak-hasher = { path = "../../test-support/keccak-hasher", version = "0.15.2" }
 
