--- a/tetsy-hash-db/Cargo.toml
+++ b/tetsy-hash-db/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Parity Technologies <admin@parity.io>"]
 description = "Trait for hash-keyed databases."
 license = "Apache-2.0"
 categories = [ "no-std" ]
-repository = "https://github.com/paritytech/trie"
+repository = "https://github.com/tetcoin/trie"
 edition = "2018"
 
 [features]
