--- a/tetsy-memory-db/Cargo.toml
+++ b/tetsy-memory-db/Cargo.toml
@@ -3,7 +3,7 @@ name = "tetsy-memory-db"
 version = "0.18.1"
 authors = ["Parity Technologies <admin@parity.io>"]
 description = "In-memory implementation of tetsy-hash-db, useful for tests"
-repository = "https://github.com/paritytech/trie"
+repository = "https://github.com/tetcoin/trie"
 license = "Apache-2.0"
 edition = "2018"
 
