--- a/tetsy-memory-db/Cargo.toml
+++ b/tetsy-memory-db/Cargo.toml
@@ -23,7 +23,7 @@ criterion = "0.2.8"
 default = ["std"]
 std = [
   "tetsy-hash-db/std",
-  "parity-util-mem/std",
+  "tetsy-util-mem/std",
 ]
 deprecated = [ "heapsize" ]
 
