tetsy-trie-db@0.19.2 publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ members = [
 	"test-support/reference-trie",
 	"test-support/trie-standardmap",
 	"test-support/trie-bench",
-	"trie-db",
+	"tetsy-trie-db",
 	"trie-root"
 ]
