--- a/test-support/reference-trie/Cargo.toml
+++ b/test-support/reference-trie/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2"}
 hash256-std-hasher = { path = "../../hash256-std-hasher", version = "0.15.2" }
 keccak-hasher = { path = "../keccak-hasher", version = "0.15.2" }
-trie-db = { path = "../../trie-db", default-features = false, version = "0.19.0" }
+tetsy-trie-db = { path = "../../tetsy-trie-db", default-features = false, version = "0.19.2" }
 trie-root = { path = "../../trie-root", default-features = false, version = "0.15.2" }
 parity-scale-codec = { version = "1.0.3", features = ["derive"] }
 
@@ -27,6 +27,6 @@ harness = false
 default = ["std"]
 # no actual support for std, only to avoid a cargo issues
 std = [
-  "trie-db/std",
+  "tetsy-trie-db/std",
   "trie-root/std",
 ]
