--- a/test-support/trie-bench/Cargo.toml
+++ b/test-support/trie-bench/Cargo.toml
@@ -13,6 +13,6 @@ trie-standardmap = { path = "../trie-standardmap", version = "0.15.2" }
 tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2"}
 tetsy-memory-db = { path = "../../tetsy-memory-db", version = "0.18.0" }
 trie-root = { path = "../../trie-root", version = "0.15.2" }
-trie-db = { path = "../../trie-db", version = "0.19.0" }
+tetsy-trie-db = { path = "../../tetsy-trie-db", version = "0.19.2" }
 criterion = "0.2.8"
 parity-scale-codec = { version = "1.0.3" }
