tetsy-trie-db@0.22.2 prepublish

--- a/test-support/tetsy-trie-bench/Cargo.toml
+++ b/test-support/tetsy-trie-bench/Cargo.toml
@@ -16,7 +16,7 @@ tetsy-keccak-hasher = { path = "../tetsy-keccak-hasher", version = "0.15.2" }
 tetsy-trie-standardmap = { path = "../tetsy-trie-standardmap", version = "0.15.2" }
 tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2"}
 tetsy-memory-db = { path = "../../tetsy-memory-db", version = "0.25.0" }
-tetsy-tetsy-trie-root = { path = "../../tetsy-trie-root", version = "0.16.0" }
+tetsy-trie-root = { path = "../../tetsy-trie-root", version = "0.16.0" }
 tetsy-trie-db = { path = "../../tetsy-trie-db", version = "0.22.0" }
 criterion = "0.3.3"
 tetsy-scale-codec = { version = "1.0.3" }
