--- a/tetsy-trie-root/test/Cargo.toml
+++ b/tetsy-trie-root/test/Cargo.toml
@@ -9,7 +9,7 @@ categories = [ ]
 edition = "2018"
 
 [dependencies]
-tetsy-tetsy-trie-root = { path = "..", version = "0.16.0" }
+tetsy-trie-root = { path = "..", version = "0.16.0" }
 tetsy-hash-db = { path = "../../tetsy-hash-db", version = "0.15.2" }
 hex-literal = "0.3"
 tetsy-keccak-hasher = { path = "../../test-support/tetsy-keccak-hasher", version = "0.15.2" }
