--- a/test-support/tetsy-trie-bench/Cargo.toml
+++ b/test-support/tetsy-trie-bench/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "tetsy-trie-bench"
-description = "Standard benchmarking suite for tetsy tries"
 version = "0.26.0"
 authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
+description = "Standard benchmarking suite for tetsy tries"
 license = "Apache-2.0"
 edition = "2018"
-keywords = [ "tetcoin", "tetcore" ]
+keywords = [ "tetcoin", "tetcore", "vapory" ]
 categories = [ "cryptography::cryptocurrencies" ]
-homepage = "https://github.com/tetcoin/trie"
+homepage = "https://core.tetcoin.org"
 repository = "https://github.com/tetcoin/trie.git"
 documentation = "https://docs.rs/tetsy-trie-bench"
 
