--- a/tetsy-memory-db/Cargo.toml
+++ b/tetsy-memory-db/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support
 description = "In-memory implementation of tetsy-hash-db, useful for tests"
 license = "Apache-2.0"
 edition = "2018"
-keywords = [ "tetcoin", "tetcore" ]
+keywords = [ "tetcoin", "tetcore", "vapory" ]
 categories = [ "cryptography::cryptocurrencies" ]
-homepage = "https://github.com/tetcoin/trie"
+homepage = "https://core.tetcoin.org"
 repository = "https://github.com/tetcoin/trie.git"
 documentation = "https://docs.rs/tetsy-memory-db"
 
