--- a/tetsy-trie-db/Cargo.toml
+++ b/tetsy-trie-db/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support
 description = "Tetsy Flavored Merkle-Patricia Trie generic over key hasher and node encoding"
 license = "Apache-2.0"
 edition = "2018"
-keywords = [ "tetcoin", "tetcore" ]
+keywords = [ "tetcoin", "tetcore", "vapory" ]
 categories = [ "cryptography::cryptocurrencies" ]
-homepage = "https://github.com/tetcoin/trie"
+homepage = "https://core.tetcoin.org"
 repository = "https://github.com/tetcoin/trie.git"
 documentation = "https://docs.rs/tetsy-trie-db"
 
