--- a/test-support/tetsy-trie-standardmap/Cargo.toml
+++ b/test-support/tetsy-trie-standardmap/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tetsy-trie-standardmap"
 description = "Standard test map for profiling tetsy tries"
-version = "0.15.2"
+version = "0.15.2-alpha"
 authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
 license = "Apache-2.0"
 edition = "2018"
@@ -13,4 +13,4 @@ documentation = "https://docs.rs/tetsy-trie-standardmap"
 
 [dependencies]
 tetsy-keccak-hasher = { path = "../tetsy-keccak-hasher", version = "0.15.2"}
-tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2"}
+tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2-alpha"}
