--- a/tetsy-hash256-std-hasher/Cargo.toml
+++ b/tetsy-hash256-std-hasher/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tetsy-hash256-std-hasher"
 description = "Tetsy standard library hasher for 256-bit prehashed keys."
-version = "0.15.2"
+version = "0.15.2-alpha"
 authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
 license = "Apache-2.0"
 edition = "2018"
