--- a/tetsy-trie-db/test/Cargo.toml
+++ b/tetsy-trie-db/test/Cargo.toml
@@ -13,12 +13,12 @@ harness = false
 
 [dependencies]
 tetsy-trie-db = { path = "..", version = "0.22.1"}
-tetsy-hash-db = { path = "../../tetsy-hash-db", version = "0.15.2"}
+tetsy-hash-db = { path = "../../tetsy-hash-db", version = "0.15.2-alpha"}
 rustc-hex = { version = "2.1.0" }
 tetsy-memory-db = { path = "../../tetsy-memory-db", version = "0.25.0" }
 rand = { version = "0.7", default-features = false, features = ["small_rng"] }
-tetsy-trie-root = { path = "../../tetsy-trie-root", version = "0.16.0"}
-tetsy-trie-standardmap = { path = "../../test-support/tetsy-trie-standardmap", version = "0.15.2" }
+tetsy-trie-root = { path = "../../tetsy-trie-root", version = "0.16.0-alpha"}
+tetsy-trie-standardmap = { path = "../../test-support/tetsy-trie-standardmap", version = "0.15.2-alpha" }
 tetsy-keccak-hasher = { path = "../../test-support/tetsy-keccak-hasher", version = "0.15.2" }
 tetsy-reference-trie = { path = "../../test-support/tetsy-reference-trie", version = "0.22.0" }
 hex-literal = "0.3"
