--- a/tetsy-hash-db/Cargo.toml
+++ b/tetsy-hash-db/Cargo.toml
@@ -6,7 +6,7 @@ description = "Tetsy trait for hash-keyed databases."
 license = "Apache-2.0"
 edition = "2018"
 keywords = [ "tetcoin", "tetcore", "vapory" ]
-categories = [ "np-std", "cryptography::cryptocurrencies" ]
+categories = [ "no-std", "cryptography::cryptocurrencies" ]
 homepage = "https://core.tetcoin.org"
 repository = "https://github.com/tetcoin/trie.git"
 documentation = "https://docs.rs/tetsy-hash-db"
