--- a/test-support/tetsy-reference-trie/Cargo.toml
+++ b/test-support/tetsy-reference-trie/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/tetcoin/trie.git"
 documentation = "https://docs.rs/tetsy-reference-trie"
 
 [dependencies]
-tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2-alpha"}
+tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2-beta"}
 tetsy-hash256-std-hasher = { path = "../../tetsy-hash256-std-hasher", version = "0.15.2-alpha" }
 tetsy-keccak-hasher = { path = "../tetsy-keccak-hasher", version = "0.15.3" }
 tetsy-trie-db = { path = "../../tetsy-trie-db", default-features = false, version = "0.22.0" }
