--- a/test-support/tetsy-trie-bench/Cargo.toml
+++ b/test-support/tetsy-trie-bench/Cargo.toml
@@ -14,7 +14,7 @@ documentation = "https://docs.rs/tetsy-trie-bench"
 [dependencies]
 tetsy-keccak-hasher = { path = "../tetsy-keccak-hasher", version = "0.15.2" }
 tetsy-trie-standardmap = { path = "../tetsy-trie-standardmap", version = "0.15.2-alpha" }
-tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2-alpha"}
+tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2-beta"}
 tetsy-memory-db = { path = "../../tetsy-memory-db", version = "0.25.0" }
 tetsy-trie-root = { path = "../../tetsy-trie-root", version = "0.16.0-alpha" }
 tetsy-trie-db = { path = "../../tetsy-trie-db", version = "0.22.0" }
