--- a/test-support/tetsy-trie-standardmap/Cargo.toml
+++ b/test-support/tetsy-trie-standardmap/Cargo.toml
@@ -13,4 +13,4 @@ documentation = "https://docs.rs/tetsy-trie-standardmap"
 
 [dependencies]
 tetsy-keccak-hasher = { path = "../tetsy-keccak-hasher", version = "0.15.2"}
-tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2-alpha"}
+tetsy-hash-db = { path = "../../tetsy-hash-db" , version = "0.15.2-beta"}
