--- a/tetsy-trie-root/Cargo.toml
+++ b/tetsy-trie-root/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tetsy-trie-root"
-version = "0.16.0-alpha"
+version = "0.16.0-beta"
 authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
 description = "In-memory patricia trie operations for tetsy"
 license = "Apache-2.0"
