--- a/trie-db/Cargo.toml
+++ b/trie-db/Cargo.toml
@@ -1,22 +1,26 @@
 [package]
-name = "trie-db"
+name = "tetsy-trie-db"
 version = "0.22.3"
-authors = ["Parity Technologies <admin@parity.io>"]
-description = "Merkle-Patricia Trie generic over key hasher and node encoding"
-repository = "https://github.com/paritytech/trie"
+authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
+description = "tetsy merkle-patricia trie generic over key hasher and node encoding"
 license = "Apache-2.0"
 edition = "2018"
+keywords = [ "tetcoin", "tetcore", "vapory" ]
+categories = [ "cryptography::cryptocurrencies" ]
+homepage = "https://core.tetcoin.org"
+repository = "https://github.com/tetcoin/trie.git"
+documentation = "https://docs.rs/tetsy-trie-db"
 
 [dependencies]
 log = "0.4"
 smallvec = "1.0.0"
-hash-db = { path = "../hash-db", default-features = false, version = "0.15.2"}
+tetsy-hash-db = { path = "../tetsy-hash-db", default-features = false, version = "0.15.3"}
 hashbrown = { version = "0.9.1", default-features = false, features = ["ahash"] }
 rustc-hex = { version = "2.1.0", default-features = false, optional = true }
 
 [features]
 default = ["std"]
 std = [
-  "hash-db/std",
+  "tetsy-hash-db/std",
   "rustc-hex",
 ]
