--- a/hash-db/Cargo.toml
+++ b/hash-db/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
-name = "hash-db"
-version = "0.15.2"
-authors = ["Parity Technologies <admin@parity.io>"]
-description = "Trait for hash-keyed databases."
+name = "tetsy-hash-db"
+version = "0.15.3"
+authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
+description = "tetsy trait for hash-keyed databases."
 license = "Apache-2.0"
-categories = [ "no-std" ]
-repository = "https://github.com/paritytech/trie"
 edition = "2018"
+keywords = [ "tetcoin", "tetcore", "vapory" ]
+categories = [ "cryptography::cryptocurrencies" ]
+homepage = "https://core.tetcoin.org"
+repository = "https://github.com/tetcoin/trie.git"
+documentation = "https://docs.rs/tetsy-hash-db"
 
 [features]
 default = ["std"]
