--- a/hash256-std-hasher/Cargo.toml
+++ b/hash256-std-hasher/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
-name = "hash256-std-hasher"
-description = "Standard library hasher for 256-bit prehashed keys."
-version = "0.15.2"
-authors = ["Parity Technologies <admin@parity.io>"]
+name = "tetsy-hash256-std-hasher"
+version = "0.15.3"
+authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
+description = "tetsy standard library hasher for 256-bit prehashed keys."
 license = "Apache-2.0"
-homepage = "https://github.com/paritytech/trie"
-categories = [ "no-std" ]
 edition = "2018"
+keywords = [ "tetcoin", "tetcore", "vapory" ]
+categories = [ "cryptography::cryptocurrencies", "no-std" ]
+homepage = "https://core.tetcoin.org"
+repository = "https://github.com/tetcoin/trie.git"
+documentation = "https://docs.rs/tetsy-hash256-std-hasher"
 
 [[bench]]
 name = "bench"
