--- a/test-support/keccak-hasher/Cargo.toml
+++ b/test-support/keccak-hasher/Cargo.toml
@@ -1,19 +1,23 @@
 [package]
-name = "keccak-hasher"
-version = "0.15.3"
-authors = ["Parity Technologies <admin@parity.io>"]
-description = "Keccak-256 implementation of the Hasher trait"
-repository = "https://github.com/paritytech/parity/"
+name = "tetsy-keccak-hasher"
+version = "0.15.4"
+authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
+description = "tetsy keccak-256 implementation of the hasher trait"
 license = "Apache-2.0"
 edition = "2018"
+keywords = [ "tetcoin", "tetcore", "vapory" ]
+categories = [ "cryptography::cryptocurrencies" ]
+homepage = "https://core.tetcoin.org"
+repository = "https://github.com/tetcoin/trie.git"
+documentation = "https://docs.rs/tetsy-keccack-hasher"
 
 [dependencies]
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
-hash-db = { path = "../../hash-db", default-features = false, version = "0.15.2" }
-hash256-std-hasher = { path = "../../hash256-std-hasher", version = "0.15.2" }
+tetsy-hash-db = { path = "../../tetsy-hash-db", default-features = false, version = "0.15.3" }
+tetsy-hash256-std-hasher = { path = "../../tetsy-hash256-std-hasher", version = "0.15.2" }
 
 [features]
 default = ["std"]
 std = [
-  "hash-db/std",
+  "tetsy-hash-db/std",
 ]
