--- a/tetsy-trie-root/test/Cargo.toml
+++ b/tetsy-trie-root/test/Cargo.toml
@@ -2,11 +2,14 @@
 name = "tetsy-trie-root-test"
 version = "0.17.0"
 authors = ["Parity Technologies <admin@parity.io>"]
-description = "Tests fo trie-root crate"
-repository = "https://github.com/paritytech/trie"
+description = "tests for tetsy-trie-root crate"
 license = "Apache-2.0"
-categories = [ ]
 edition = "2018"
+keywords = [ "tetcoin", "tetcore", "vapory" ]
+categories = [ "cryptography::cryptocurrencies" ]
+homepage = "https://core.tetcoin.org"
+repository = "https://github.com/tetcoin/trie.git"
+documentation = "https://docs.rs/tetsy-trie-root-test"
 
 [dependencies]
 tetsy-trie-root = { path = "..", version = "0.16.0" }
