--- a/tetsy-trie-db/fuzz/Cargo.toml
+++ b/tetsy-trie-db/fuzz/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2018"
 cargo-fuzz = true
 
 [dependencies]
-tetsy-hash-db = { path = "../../hash-db", version = "0.15.3" }
-tetsy-memory-db = { path = "../../memory-db", version = "0.26.0" }
-tetsy-reference-trie = { path = "../../test-support/reference-trie", version = "0.23.0" }
-tetsy-keccak-hasher = { path = "../../test-support/keccak-hasher", version = "0.15.4" }
+tetsy-hash-db = { path = "../../tetsy-hash-db", version = "0.15.3" }
+tetsy-memory-db = { path = "../../tetsy-memory-db", version = "0.26.0" }
+tetsy-reference-trie = { path = "../../test-support/tetsy-reference-trie", version = "0.23.0" }
+tetsy-keccak-hasher = { path = "../../test-support/tetsy-keccak-hasher", version = "0.15.4" }
 
 [dependencies.trie-db]
 path = ".."
