--- a/tetsy-trie-root/Cargo.toml
+++ b/tetsy-trie-root/Cargo.toml
@@ -17,5 +17,5 @@ tetsy-hash-db = { path = "../tetsy-hash-db", default-features = false, version =
 [features]
 default = ["std"]
 std = [
-	"hash-db/std"
+	"tetsy-hash-db/std"
 ]
